# quantum_sync_local

./: CMakeLists.txt  install.sh
config/: mpd.conf
src/: http_server.cpp  http_server.hpp  main.cpp
systemd/: quantumsync-local-mpd.service  quantumsync-local.service
